# litenet

./: .gitignore  CMakeLists.txt  README.md  environment.yml  heapsort.c  litenet.ipynb  setup.py  summer.c
docs/: journal.md  llm_prompt.md  roadmap.md
first_test/: ft.ipynb
src/c/: hello.c
src/c/core/tensor/: tensor.c  tensor.h
src/c/python/: tensormodule.c
src/c/python_binder/: tensormodule.c
src/c/tensor/: tensor.c  tensor.h
src/python/litenet/: __init__.py  tensor.py
